# supersidian

./: .env.example  .gitattributes  .gitignore  PROVIDERS.md  README.md  macos_com.supersidian.plist.example  pyproject.toml  requirements.txt  supersidian.config.example.json  test_provider_integration.py
SupersidianApp/: DEPENDENCIES.md  README.md  SETUP.md
SupersidianApp/Supersidian/App/: AppDelegate.swift  SupersidianApp.swift
SupersidianApp/Supersidian/Models/: AppConfiguration.swift  BridgeStatus.swift
SupersidianApp/Supersidian/Resources/: Info.plist  Supersidian.entitlements
SupersidianApp/Supersidian/Services/Configuration/: ConfigurationManager.swift
SupersidianApp/Supersidian/Services/Database/: DatabaseManager.swift
SupersidianApp/Supersidian/Services/Notifications/: NotificationManager.swift
SupersidianApp/Supersidian/Services/Supersidian/: SupersidianRunner.swift
SupersidianApp/Supersidian/ViewModels/: PreferencesViewModel.swift  SyncCoordinator.swift
SupersidianApp/Supersidian/Views/Preferences/: AdditionalPreferencesViews.swift  GeneralPreferencesView.swift  HealthcheckPreferencesView.swift  PreferencesWindow.swift  VaultsPreferencesView.swift
SupersidianApp/Supersidian/Views/Sync/: SyncProgressWindow.swift  SyncView.swift
SupersidianApp/SupersidianMac.xcodeproj/: project.pbxproj
SupersidianApp/SupersidianMac.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SupersidianApp/SupersidianMac.xcodeproj/xcshareddata/xcschemes/: Supersidian.xcscheme
SupersidianApp/SupersidianMac/SupersidianMac/: ContentView.swift  SupersidianMacApp.swift
SupersidianApp/SupersidianMac/SupersidianMac.xcodeproj/: project.pbxproj
SupersidianApp/SupersidianMac/SupersidianMac.xcodeproj/project.xcworkspace/xcuserdata/jaygoldman.xcuserdatad/: UserInterfaceState.xcuserstate
SupersidianApp/SupersidianMac/SupersidianMac.xcodeproj/xcuserdata/jaygoldman.xcuserdatad/xcschemes/: xcschememanagement.plist
supersidian/: __init__.py  __main__.py  __version__.py  bridge.py  config.py  storage.py  supersidian.py
supersidian/notes/: __init__.py  base.py  markdown.py  obsidian.py
supersidian/notifications/: __init__.py  base.py  menubar.py  webhook.py
supersidian/sync/: __init__.py  base.py  dropbox.py  local.py
supersidian/todo/: __init__.py  base.py  todoist.py
